# basekit

./: .gitignore  README.md  TODO.md  playground.py  pyproject.toml
README/: Bconv.asc  Bconv_Instructions.txt
src/basekit/: __init__.py  cli.py  context.py  convert.py  digits.py
src/dozenal_system/: __init__.py  cli.py  notation.py
tests/: test_convert.py  test_notation.py
