[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "dozenal-system"
version = "0.1.0"
description = "Exact base conversion library and CLI using base-marker generic notation"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Ruben Ayla" }
]
keywords = ["dozenal", "base-conversion", "number-systems", "cli"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.scripts]
dozenal = "dozenal_system.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8.0", "build>=1.2"]

[tool.hatch.build.targets.wheel]
packages = ["src/dozenal_system"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
