[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "basekit"
version = "0.2.0"
description = "Exact base conversion toolkit with ergonomic base contexts"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Ruben Ayla" }
]
keywords = ["dozenal", "base-conversion", "number-systems", "cli"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.scripts]
basekit = "basekit.cli:main"
dozenal = "basekit.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8.0", "build>=1.2"]

[tool.hatch.build.targets.wheel]
packages = ["src/basekit"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
